syntax = "proto3";

message IMRequest {
  uint32 type = 1;
  bytes value = 2;
}

message IMResponse {
  bool success = 1;
  string msg = 2;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message MessageRequest {
  bool broadcast = 1;
  string username = 2;
  string msg = 3;
}

message WhoElseRequest {
  bool limitTime = 1;
  uint32 pastSeconds = 2;
  bool currentlyOnline = 3;
}

message BlockRequest {
  string username = 1;
}

message UnBlockRequest {
  string username = 1;
}

message GetIPRequest {
  string username = 1;
}
